# distributed-nvm-hashtable

./: Dockerfile  README.md
DHTS/distributed/: README.md  main.cpp
DHTS/map/: HashMap.hpp  NvmHashMap.hpp  make.sh  runTests.sh
DHTS/map/tests/: CMakeLists.txt  constants.hpp  testsIntIterate.cpp  testsIntIterateRandom.cpp  testsPerformance1.cpp  testsPerformance16.cpp  testsPerformance2.cpp  testsPerformance4.cpp  testsPerformance8.cpp  testsPerformanceHashMap.cpp  testsStringInsertGet.cpp  testsStringInsertGetParallel.cpp  testsStringInsertRemove.cpp
DHTS/map/tests/results/: .~lock.Combined.csv#
cluster/: CMakeLists.txt  README.md  build.sh  main.cc
distributed/: README.md  build.sh  main.cpp
map/: .map.hpp.swp  Exception.hpp  NvmHashMap.hpp  main.cpp  make.sh  map.hpp  performance.txt  runTests.sh
map/tests/: CMakeLists.txt  constants.hpp  readme.txt  runTests  runTestsInt  runTestsPerformance  runTestsStr  tests.cpp  testsInt.cpp  testsIntInsertGet.cpp  testsIntInsertGetParallel.cpp  testsIntInsertRemove.cpp  testsIntInsertRemoveParallel.cpp  testsIntIterate.cpp  testsPerformance.cpp  testsPerformance1.cpp  testsPerformance16.cpp  testsPerformance2.cpp  testsPerformance4.cpp  testsPerformance8.cpp  testsPerformanceUnordered.cpp  testsStr.cpp  testsStringInsertGet.cpp  testsStringInsertRemove.cpp  testsStringInsertRemoveParallel.cpp  testsStringIterate.cpp
map/tests/results/: .~lock.Combined.csv#  Combined.csv  NvmHashMap.csv  Outline.csv  UnorderedMap.csv
thesis/: 01-introduction.tex  02-theory.tex  03-own-work.tex  04-conclusion.tex  04-distributed.tex  05-conclusions.tex  0b-pisanie-w-latexu.tex  3-own-work-backup.tex  bibliography.bib  macros.sty  ppfcmthesis.cls  thesis-bachelor-english.tex
